src/sass/main.scss
@import './variables';
@import './mixins';
@import './animations';

*,
::before,
::after {
  margin: 0;
  padding: 0;
  box-sizing: inherit;
  list-style: none;
  font-family: inherit;
}

html {
  font-size: 62.5%;

  @include responsive(big-desk) {
    font-size: 75%; //1rem = 12px
  }

  @include responsive(tab-land) {
    font-size: 56.25%; //1rem = 9px
  }

  @include responsive(tab-port) {
    font-size: 50%; //1rem = 8px (8/16 = 50%)
  }

  @include responsive(phone) {
    font-size: 37.5%; //1rem = 6px
  }
}

body {
  font-size: 1.6rem;
  font-family: 'Syne', sans-serif;
  line-height: 1.7;
  color: $color-secondary;
  background-color: $color-primary;
  box-sizing: border-box;
  overflow-x: hidden;
}

.loading {
  display: grid;
  place-content: center;
  height: 100vh;
  background-color: rgb(20, 20, 20);
  color: rgb(220, 220, 220);

  &__title {
    font-size: 10rem;
    clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
    line-height: 0.8em;

    @include responsive(tab-port) {
      font-size: 8rem;
    }

    @include responsive(phone) {
      font-size: 7rem;
    }
  }

  &__title-char {
    display: inline-block;
    transform: translateY(118px);
    transition: transform 0.5s;
  }
}

.animated-gradient {
  @include animatedGradient;
}

.header {
  width: 100%;
  padding: 0 5rem;
  height: 8rem;
  display: flex;
  justify-content: space-between;
  align-items: center;
  position: sticky;
  top: 0;
  z-index: 10;
  transition: all 300ms ease-in;
  animation: navbarAppear 300ms ease-in;

  &--active {
    background-color: rgba(255, 255, 255, 0.98);
    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
  }

  &--hidden {
    visibility: hidden;
    animation: navbarDisappear 300ms ease-in;
  }
}

.logo {
  z-index: 9999;

  &__text {
    font-size: 2.5rem;
    font-weight: 700;
    text-decoration: none;
    color: $color-secondary;
    transition: animation 0.3s;

    @include responsive(tab-port) {
      font-size: 3rem;
    }
  }
}

.navigation {
  display: flex;
  align-items: center;

  @include responsive(tab-port) {
    display: none;
  }
}

.nav {
  font-size: 1.5rem;
  margin-right: 1rem;

  &__list {
    margin: 1rem;
    display: flex;
    justify-content: space-between;
  }

  &__item-link:link,
  &__item-link:visited {
    @include linkStyle;
    margin-right: 1rem;
  }
}

.downloadButton {
  @include buttonStyle;
  transition: transform 0.3s, box-shadow 0.3s, color 0.3s, background-color 0.3s;
  font-size: 1.3rem;
}

.hamburger {
  display: none;

  @include responsive(tab-port) {
    display: block;
  }

  span {
    display: block;
    width: 28px;
    height: 2px;
    background-color: $color-secondary;
    transition: width 0.4s, transform 0.4s;

    &:not(:last-child) {
      margin-bottom: 7px;
    }
  }

  &.active {
    transition-property: transform;
    transition-delay: 0.8s;
    z-index: 9999;

    span {
      background-color: #fff;
    }

    span:nth-child(2) {
      width: 0;
    }

    span:nth-child(1),
    span:nth-child(3) {
      transition-delay: 0.4s;
    }

    span:nth-child(1) {
      transform: translateY(9px) rotate(45deg);
    }

    span:nth-child(3) {
      transform: translateY(-9px) rotate(135deg);
    }
  }

  &__nav {
    position: fixed;
    z-index: 999;
    width: 100%;
    height: 100%;
    background: $color-tertiary;
    display: flex;
    align-items: center;
    justify-content: center;
    left: 0;
    transition: 0.3s ease-in-out;

    &.inactive {
      opacity: 0;
      top: -100%;
    }

    &.active {
      opacity: 100%;
      top: 0;
    }
  }

  &__item {
    font-size: 4rem;
    margin-bottom: 2rem;
  }

  &__item-link:link,
  &__item-link:visited {
    @include linkStyle;
    color: #fff;
  }
}

.main {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.intro {
  display: flex;
  justify-content: center;
  align-items: center;
  height: calc(100vh - 8rem);

  @include responsive(tab-land) {
    padding: 0 3vw;
  }
  @include responsive(tab-port) {
    flex-direction: column;
    margin-top: 25vh;
  }
  @include responsive(phone) {
    margin-top: 10vh;
    padding: 0 5rem;
  }

  &__title {
    font-size: 2.6rem;
    font-weight: 400;
    margin-right: 4rem;
    padding-left: 2rem;

    @include responsive(tab-land) {
      margin-right: 0;
      padding-left: 0;
    }

    @include responsive(tab-port) {
      font-size: 3rem;
    }

    &--focus {
      font-size: 7.2rem;
      display: block;
      font-weight: 700;

      @include responsive(tab-land) {
        font-size: 7rem;
      }
    }
  }

  &__button {
    @include buttonStyle;
    font-size: 1.8rem;
    margin: 4rem 1rem;
    transition: transform 0.3s, box-shadow 0.3s, color 0.3s,
      background-color 0.3s;

    @include responsive(tab-port) {
      font-size: 2.2rem;
      margin: 3rem 0 5rem;
    }
  }

  &__scroll {
    opacity: 0.2;
    animation: arrow-move 1s linear infinite;
    position: absolute;
    bottom: 5%;
    left: 50%;

    @include responsive(tab-land) {
      display: none;
    }
  }

  & > div {
    @include responsive(tab-port) {
      text-align: center;
    }
  }
}

.cloud {
  max-width: 600px;
  min-width: 320px;

  @include responsive(big-desk) {
    max-width: 850px;
    margin-left: 10rem;
  }

  @include responsive(tab-port) {
    max-width: 500px;
    margin-bottom: 5vh;
  }
  @include responsive(phone) {
    margin-bottom: 0;
  }
}

.section {
  padding: 10rem 0;

  @include responsive(tab-land) {
    padding: 3rem 0;
    margin-top: 0;
  }

  h2 {
    text-align: center;
    font-size: 3.2rem;
    margin-bottom: 4rem;
  }
}

.projects {
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 25vh 5vw;
  background: rgb(218, 232, 232);
  clip-path: polygon(0 14%, 100% 0%, 100% 86%, 0 100%);
  @include responsive(tab-land) {
    clip-path: polygon(0 13%, 100% 0%, 100% 87%, 0 100%);
  }
  @include responsive(tab-port) {
    clip-path: polygon(0 7%, 100% 0%, 100% 93%, 0 100%);
  }

  &__box {
    max-width: 1500px;
    display: flex;
    flex-wrap: wrap;
    gap: 2rem;
    justify-content: center;
  }
}

.project {
  font-size: 1.8rem;
  font-family: 'Poppins', sans-serif;
  width: 31%;
  max-width: 500px;
  padding-bottom: 2rem;
  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
  border-radius: 1rem;
  background-color: #fff;
  transition: all 0.3s ease-in-out;
  overflow: hidden;
  position: relative;

  @include responsive(tab-land) {
    width: 45%;
  }
  @include responsive(tab-port) {
    width: 80%;
    font-size: 2.3rem;
  }
  @include responsive(phone) {
    width: 90%;
  }

  &:hover {
    transform: translateY(-1px);
    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
      rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;

    @include responsive(tab-land) {
      transform: none;
      box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
    }

    .project__image {
      filter: blur(5px);

      @include responsive(tab-land) {
        filter: none;
      }
    }
  }

  &__image {
    object-fit: cover;
    height: 200px;
    width: 100%;
    clip-path: ellipse(95% 63% at 50% 35%);
    transition: filter 300ms;
  }

  &__figure {
    position: relative;
  }

  &__image-caption {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);

    @include responsive(tab-land) {
      display: none;
    }

    a {
      font-size: 1rem;
      display: block;
      text-decoration: none;
      margin-bottom: 0.5rem;
      text-align: center;
      @include buttonStyle;
    }
  }

  &__image-caption--hidden {
    display: none;
  }

  &__name,
  &__desc,
  &__stack {
    padding: 0 2.5rem 1rem;
  }

  &__desc {
    color: $grey-primary;
    font-size: 1.5rem;
  }

  &__stack {
    display: flex;
    flex-wrap: wrap;
    gap: 0.2rem;
  }

  &__tech {
    font-size: 1rem;
    margin-right: 1rem;
    color: $color-primary;
    border-radius: 10%;
    padding: 0.2rem 0.5rem;

    @include responsive(tab-port) {
      font-size: 1.3rem;
    }
    &--react {
      background-color: $react;
    }
    &--redux {
      background-color: $redux;
    }
    &--tailwind {
      background-color: $tailwind;
    }
    &--nodejs {
      background-color: $node;
    }
    &--postgresql {
      background-color: $postgres;
    }
    &--firebase {
      background-color: $firebase;
    }
    &--gsap {
      background-color: $gsap;
    }
    &--scss {
      background-color: $scss;
    }
  }

  &__links-mobile {
    display: none;
    position: absolute;
    top: 5%;
    right: 5%;

    @include responsive(tab-land) {
      display: block;
    }

    a:link,
    a:visited {
      @include linkStyle;
    }

    .material-symbols-sharp {
      margin-right: 1rem;
      background-color: $color-primary;
      border-radius: 50%;
      padding: 1rem;
      box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 2px;
    }
  }
}

.experience {
  width: 100%;

  &__position {
    font-family: 'Poppins', sans-serif;
    min-height: 31.5rem;
    max-width: 50rem;
    padding: 3rem 3rem;
    margin: 3rem 1rem 9rem;
    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
    border-radius: 1rem;
    background-color: #fff;
    overflow-x: hidden;
    transition: all 0.8s;

    @include responsive(tab-port) {
      padding: 3rem 2rem;
    }

    @include responsive(phone) {
      max-width: 80vw;
      min-height: 35rem;
    }

    &--nike {
      border-top: 5px solid orange;
    }
    &--gefco {
      border-top: 5px solid yellow;
    }
    &--oclock {
      border-top: 5px solid green;
    }
  }

  &__title {
    font-size: 2rem;
  }

  &__company {
    margin-bottom: 1rem;
    font-weight: 400;
  }

  &__logo {
    position: absolute;
    top: 15%;
    right: 15%;
  }

  &__date {
    font-weight: 400;
    margin-bottom: 1rem;
  }

  &__missions-item {
    font-size: 1.5rem;
    font-weight: 300;
    color: $grey-primary;
    &::before {
      content: '▹ ';
    }
  }

  .swiper-button-prev,
  .swiper-button-next {
    color: rgba(175, 174, 174, 0.8);
    top: 90%;
    outline: none;
  }
  .swiper-button-prev {
    left: 45%;
    @include responsive(tab-land) {
      left: 40%;
    }
    @include responsive(tab-port) {
      left: 35%;
    }
    @include responsive(phone) {
      left: 30%;
    }
  }
  .swiper-button-next {
    right: 45%;
    @include responsive(tab-land) {
      right: 40%;
    }
    @include responsive(tab-port) {
      right: 35%;
    }
    @include responsive(phone) {
      right: 30%;
    }
  }
}

.about {
  width: 100%;
  padding: 20vh 10vw;
  background: rgb(218, 232, 232);
  clip-path: polygon(0 16%, 100% 0%, 100% 84%, 0 100%);

  &__box {
    max-width: 800px;
    margin: 0 auto;
  }

  &__desc {
    font-size: 2rem;
    text-align: justify;

    @include responsive(phone) {
      font-size: 2.5rem;
    }
  }
}

.contact {
  font-size: 2rem;
  text-align: center;
  width: 60%;

  &__desc {
    @include responsive(phone) {
      font-size: 2.5rem;
    }
  }

  &__button {
    @include buttonStyle;
    font-size: 1.6rem;
    text-decoration: none;
    display: inline-block;
    margin-top: 2em;
    transition: all 0.3s;

    @include responsive(phone) {
      font-size: 2rem;
    }

    &:active {
      background-color: $color-secondary;
      transform: scale(1) translateY(0);
    }
  }
}

.footer {
  font-size: 1.6rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin: 5rem 0 2rem;

  @include responsive(phone) {
    font-size: 2rem;
  }

  &__text {
    margin-bottom: 1rem;
  }

  &__icon {
    margin: 0.5rem;
    border-radius: 50%;
  }
}

